[package]
name = "iced-hs"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies.iced]
# version = "0.13"
# use upstream to provide physical keys
git = "https://github.com/iced-rs/iced.git"
rev = "4a080e2"
features = ["advanced", "canvas", "image", "lazy", "markdown", "tokio"]

[dependencies.iced_winit]
# version = "0.13"
git = "https://github.com/iced-rs/iced.git"
rev = "4a080e2"

[dependencies.iced_widget]
# version = "0.13"
git = "https://github.com/iced-rs/iced.git"
rev = "4a080e2"

[dependencies.tokio]
version = "1.40"
features = ["macros", "rt-multi-thread", "sync", "time"]
