[package]
name = "iced-hs"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2021"

[lib]
path = "rust-src/lib.rs"
crate-type = ["staticlib"]

[dependencies.iced]
version = "0.14"
features = ["advanced", "canvas", "image", "lazy", "markdown", "svg", "tokio"]

[dependencies.iced_winit]
version = "0.14"

[dependencies.iced_widget]
version = "0.14"

[dependencies.tokio]
version = "1.49"
features = ["macros", "rt-multi-thread", "sync", "time"]
