cabal-version: 3.0
name: iced-hs
version: 0.0.3.0
homepage: https://github.com/ibaryshnikov/iced-hs
bug-reports:
  https://github.com/ibaryshnikov/iced-hs/issues

license: MIT
build-type: Simple
tested-with:
  ghc ==9.6.6 || ==9.8.4 || ==9.10.1

extra-source-files:
  LICENSE
  README.md


flag examples
    Description:     Build examples
    Manual: True
    Default:         False

source-repository head
  type: git
  location: https://github.com/ibaryshnikov/iced-hs

common common
  build-depends:
    base >=4.14 && <5,
    bytestring,
    template-haskell,

  default-extensions:
    CApiFFI

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind

  default-language: GHC2021

common common-rts-options
  ghc-options:
    -rtsopts
    -threaded
    -with-rtsopts=-N

library
  import: common
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    Iced
    Iced.Application
    Iced.Attribute
    Iced.Attribute.Alignment
    Iced.Attribute.AlignmentFFI
    Iced.Attribute.Color
    Iced.Attribute.Icon
    Iced.Attribute.Internal
    Iced.Attribute.Length
    Iced.Attribute.LengthFFI
    Iced.Attribute.LineHeight
    Iced.Attribute.LineHeightFFI
    Iced.Attribute.OnInput
    Iced.Attribute.Padding
    Iced.Attribute.PaddingFFI
    Iced.Attribute.Placeholder
    Iced.Attribute.Size
    Iced.Attribute.SliderCommon
    Iced.Attribute.Spacing
    Iced.Attribute.Status
    Iced.Attribute.Style
    Iced.Attribute.Text
    Iced.Attribute.TextFFI
    Iced.Color
    Iced.ColorFFI
    Iced.Command
    Iced.Element
    Iced.Font
    Iced.Future
    Iced.Future.Internal
    Iced.Future.Runtime
    Iced.Internal
    Iced.Internal.Command
    Iced.Keyboard
    Iced.Keyboard.Key
    Iced.Keyboard.LogicalKey
    Iced.Keyboard.PhysicalKey
    Iced.Settings
    Iced.Size
    Iced.Style
    Iced.Style.Container
    Iced.Style.Internal
    Iced.Subscription
    Iced.Theme
    Iced.Time
    Iced.Time.Duration
    Iced.Widget
    Iced.Widget.Button
    Iced.Widget.Canvas
    Iced.Widget.Canvas.Fill
    Iced.Widget.Canvas.Frame
    Iced.Widget.Canvas.FrameAction
    Iced.Widget.Canvas.FramePtr
    Iced.Widget.Canvas.Path
    Iced.Widget.Canvas.PathBuilder
    Iced.Widget.Canvas.Shape
    Iced.Widget.Canvas.Stroke
    Iced.Widget.Canvas.Style
    Iced.Widget.Center
    Iced.Widget.Checkbox
    Iced.Widget.Column
    Iced.Widget.ComboBox
    Iced.Widget.Container
    Iced.Widget.Image
    Iced.Widget.Markdown
    Iced.Widget.PickList
    Iced.Widget.ProgressBar
    Iced.Widget.Radio
    Iced.Widget.Responsive
    Iced.Widget.Row
    Iced.Widget.Scrollable
    Iced.Widget.Slider
    Iced.Widget.Space
    Iced.Widget.Text
    Iced.Widget.TextEditor
    Iced.Widget.TextInput
    Iced.Widget.Toggler
    Iced.Widget.Tooltip
    Iced.Widget.VerticalSlider

executable buttonStyles
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             buttonStyles/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable canvas
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             canvas/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable checkbox
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             checkbox/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable comboBox
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             comboBox/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable counter
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             counter/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable image
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             image/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable keyboard
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             keyboard/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable markdown
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             markdown/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable performAsync
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             performAsync/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable pickList
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             pickList/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable progressBar
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             progressBar/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable radio
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             radio/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable readFile
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             readFile/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable responsive
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             responsive/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable slider
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             slider/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable spaceShooter
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             spaceShooter/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable stopwatch
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             stopwatch/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable textEditor
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             textEditor/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable textInput
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             textInput/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable themes
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             themes/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable title
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             title/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable toggler
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             toggler/Main.hs.hs
  build-depends:       base,
                       iced-hs,

executable tooltip
  if !flag(examples)
    Buildable: False
  hs-source-dirs:      examples
  ghc-options:         -threaded -Wall -Wcompat -O2
  default-language:    Haskell2010
  default-extensions:  CPP
  main-is:             tooltip/Main.hs.hs
  build-depends:       base,
                       iced-hs,
