cabal-version: 3.8
version: 0.0.3.0
name: iced-hs
synopsis: Haskell bindings to the iced cross-platform GUI library
category: gui
homepage: https://github.com/ibaryshnikov/iced-hs
maintainer: Ilya Baryshnikov <baryshnikov.il@gmail.com>
bug-reports:
  https://github.com/ibaryshnikov/iced-hs/issues

license: MIT
build-type: Custom
tested-with:
  ghc ==9.6.6 || ==9.8.4 || ==9.10.1

-- Files tracked by `cabal build`; changes in these files cause (partial) rebuilds.
-- cabal-gild: discover rust-src/ Cargo.toml
extra-source-files:
  Cargo.toml
  rust-src/alignment.rs
  rust-src/color.rs
  rust-src/ffi.rs
  rust-src/task.rs
  rust-src/future.rs
  rust-src/keyboard/key.rs
  rust-src/keyboard/mod.rs
  rust-src/keyboard/physical.rs
  rust-src/length.rs
  rust-src/lib.rs
  rust-src/line_height.rs
  rust-src/padding.rs
  rust-src/settings.rs
  rust-src/subscription.rs
  rust-src/theme.rs
  rust-src/time.rs
  rust-src/widget/button.rs
  rust-src/widget/canvas/fill.rs
  rust-src/widget/canvas/frame.rs
  rust-src/widget/canvas/gradient.rs
  rust-src/widget/canvas/mod.rs
  rust-src/widget/canvas/path.rs
  rust-src/widget/canvas/path_builder.rs
  rust-src/widget/canvas/stroke.rs
  rust-src/widget/canvas/style.rs
  rust-src/widget/canvas/text.rs
  rust-src/widget/checkbox.rs
  rust-src/widget/column.rs
  rust-src/widget/combo_box.rs
  rust-src/widget/container.rs
  rust-src/widget/image.rs
  rust-src/widget/markdown.rs
  rust-src/widget/mouse_area.rs
  rust-src/widget/mod.rs
  rust-src/widget/pick_list.rs
  rust-src/widget/progress_bar.rs
  rust-src/widget/radio.rs
  rust-src/widget/responsive.rs
  rust-src/widget/row.rs
  rust-src/widget/scrollable.rs
  rust-src/widget/slider.rs
  rust-src/widget/space.rs
  rust-src/widget/text.rs
  rust-src/widget/text_editor.rs
  rust-src/widget/text_input.rs
  rust-src/widget/toggler.rs
  rust-src/widget/tooltip.rs
  rust-src/widget/vertical_slider.rs

-- cabal-gild: discover LICENSE README.md docs/
extra-doc-files:
  LICENSE
  README.md
  docs/CANVAS.md
  docs/README.md
  docs/THEMES.md
  docs/VISION.txt
  docs/WIDGETS.md

flag examples
  description: Build examples
  manual: True
  default: False

source-repository head
  type: git
  location: https://github.com/ibaryshnikov/iced-hs

custom-setup
  setup-depends:
    Cabal >=3.14,
    base >=4.18 && <5,
    directory >=1.3,
    process ^>=1.6,

common common
  build-depends:
    base >=4.14 && <5,
    bytestring,

  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind

  default-language: GHC2021

common common-rts-options
  ghc-options:
    -rtsopts
    -threaded
    -with-rtsopts=-N

common examples-common
  import: common
  import: common-rts-options

  hs-source-dirs: examples
  build-depends:
    iced-hs,

  if !flag(examples)
    buildable: False

library
  import: common
  hs-source-dirs: src
  extra-bundled-libraries: Ciced_hs
  -- cabal-gild: discover src
  exposed-modules:
    Iced
    Iced.Application
    Iced.Attribute
    Iced.Attribute.Alignment
    Iced.Attribute.AlignmentFFI
    Iced.Attribute.Color
    Iced.Attribute.Icon
    Iced.Attribute.Internal
    Iced.Attribute.Length
    Iced.Attribute.LengthFFI
    Iced.Attribute.LineHeight
    Iced.Attribute.LineHeightFFI
    Iced.Attribute.OnInput
    Iced.Attribute.OnPress
    Iced.Attribute.OnRelease
    Iced.Attribute.Padding
    Iced.Attribute.PaddingFFI
    Iced.Attribute.Placeholder
    Iced.Attribute.Size
    Iced.Attribute.SliderCommon
    Iced.Attribute.Spacing
    Iced.Attribute.Style
    Iced.Attribute.Text
    Iced.Color
    Iced.ColorFFI
    Iced.Task
    Iced.Element
    Iced.Future
    Iced.Future.Internal
    Iced.Future.Runtime
    Iced.Internal
    Iced.Internal.Task
    Iced.Keyboard
    Iced.Keyboard.Key
    Iced.Keyboard.LogicalKey
    Iced.Keyboard.PhysicalKey
    Iced.Settings
    Iced.Size
    Iced.Style
    Iced.Style.Internal
    Iced.Style.Status
    Iced.Subscription
    Iced.Theme
    Iced.Time
    Iced.Time.Duration
    Iced.Widget
    Iced.Widget.Button
    Iced.Widget.Canvas
    Iced.Widget.Canvas.Fill
    Iced.Widget.Canvas.Frame
    Iced.Widget.Canvas.FrameAction
    Iced.Widget.Canvas.FramePtr
    Iced.Widget.Canvas.Path
    Iced.Widget.Canvas.PathBuilder
    Iced.Widget.Canvas.Shape
    Iced.Widget.Canvas.Stroke
    Iced.Widget.Canvas.Style
    Iced.Widget.Canvas.Text
    Iced.Widget.Canvas.TextFFI
    Iced.Widget.Checkbox
    Iced.Widget.Column
    Iced.Widget.ComboBox
    Iced.Widget.Container
    Iced.Widget.Image
    Iced.Widget.Markdown
    Iced.Widget.MouseArea
    Iced.Widget.PickList
    Iced.Widget.ProgressBar
    Iced.Widget.Radio
    Iced.Widget.Responsive
    Iced.Widget.Row
    Iced.Widget.Scrollable
    Iced.Widget.Slider
    Iced.Widget.Space
    Iced.Widget.Text
    Iced.Widget.TextEditor
    Iced.Widget.TextInput
    Iced.Widget.Toggler
    Iced.Widget.Tooltip
    Iced.Widget.VerticalSlider

executable buttonStyles
  import: examples-common
  main-is: buttonStyles/Main.hs

executable canvas
  import: examples-common
  main-is: canvas/Main.hs

executable checkbox
  import: examples-common
  main-is: checkbox/Main.hs
  build-depends:
    bytestring,
    directory,

executable comboBox
  import: examples-common
  main-is: comboBox/Main.hs

executable counter
  import: examples-common
  main-is: counter/Main.hs

executable image
  import: examples-common
  main-is: image/Main.hs
  build-depends:
    directory,

executable keyboard
  import: examples-common
  main-is: keyboard/Main.hs

executable markdown
  import: examples-common
  main-is: markdown/Main.hs

executable mouseArea
  import: examples-common
  main-is: mouseArea/Main.hs

executable performAsync
  import: examples-common
  main-is: performAsync/Main.hs

executable pickList
  import: examples-common
  main-is: pickList/Main.hs

executable progressBar
  import: examples-common
  main-is: progressBar/Main.hs

executable radio
  import: examples-common
  main-is: radio/Main.hs

executable readFile
  import: examples-common
  main-is: readFile/Main.hs
  build-depends:
    directory,

executable responsive
  import: examples-common
  main-is: responsive/Main.hs

executable slider
  import: examples-common
  main-is: slider/Main.hs

executable spaceShooter
  import: examples-common
  main-is: spaceShooter/Main.hs

executable stopwatch
  import: examples-common
  main-is: stopwatch/Main.hs

executable textEditor
  import: examples-common
  main-is: textEditor/Main.hs

executable textInput
  import: examples-common
  main-is: textInput/Main.hs

executable themes
  import: examples-common
  main-is: themes/Main.hs

executable title
  import: examples-common
  main-is: title/Main.hs

executable toggler
  import: examples-common
  main-is: toggler/Main.hs

executable tooltip
  import: examples-common
  main-is: tooltip/Main.hs
